--- a/codes/poreOccupancyAnalysis/Readme
+++ b/codes/poreOccupancyAnalysis/Readme
@@ -5,4 +5,6 @@ https://github.com/ImperialCollegeLondon/pnextract.git
 
 Subsequently, the wet image is mapped onto the extracted network. Please note that the preferred format for wet images is TIFF.
 
-This code generates the mapping results and provides the distribution of pores and throats based on the input data. Included in the repository is a standalone software in the form of a binary file, which simplifies the entire process. A sample file is provided for you to test the software and familiarize yourself with its functionality.
+This code generates the mapping results and provides the distribution of pores and throats based on the input data. 
+
+Included in the repository is a standalone software in the form of a binary file, which simplifies the entire process. A sample file is provided for you to test the software and familiarize yourself with its functionality.
