--- a/codes/TangentPcFit/README
+++ b/codes/TangentPcFit/README
@@ -1,1 +1,16 @@
+# FitTanCapillaryModel
+
+This is a capillary model that we have proposed based on a tangent function:
+
+**P<sub>c</sub> = A + B * tan(π/2 - π * S<sub>e</sub><sup>C</sup>)**
+
+## Model Description
+
+- **S<sub>e</sub>**: The effective saturation, defined as (S<sub>w</sub> - S<sub>wi</sub>) / (1 - S<sub>or</sub> - S<sub>wi</sub>).
+- **A, B, and C**: These parameters are used for fitting the model.
+- **S<sub>wi</sub> and S<sub>or</sub>**: Residual wetting and non-wetting saturations, which can also be considered as fitting parameters.
+
+## Usage
+
+The input to the code should include lists of Sw (water saturation) and capillary pressure.
 
